<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="operand1">Operand 1</string>
    <string name="operand2">Operand 2</string>
    <string name="Operation">Operations:</string>
    <string name="sum">Summ</string>
    <string name="subtr">Subtraction</string>
    <string name="div">Division</string>
    <string name="mult">Multiplication</string>
    <string name="go">Count</string>
    <string name="operator_not_select">The operator is not selected. Please select an operator!</string>
    <string name="incorrect_operator">Incorrect operator</string>
    <string name="incorrect_operand">Incorrect operand</string>
    <string name="result_format">Result: %.2f</string>
    <string name="error_operator_not_select">ERROR - OPERATOR NOT SELECT</string>
    <string name="error_incorrect_operand">ERROR - INCORRECT OPERAND</string>
    <string name="history">History</string>
</resources>
